--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,6 @@ VITE_LOGOUT_REDIRECT_URI="<logout-redirect-uri>"
 
 # Microsoft Graph APIのエンドポイント
 VITE_GRAPH_ME_ENDPOINT="https://graph.microsoft.com/v1.0/me"
+
+# axiosのタイムアウト時間（ミリ秒）
+VITE_AXIOS_TIMEOUT="5000"
