--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@azure/msal-browser": "^5.0.2",
     "@azure/msal-react": "^5.0.2",
+    "axios": "^1.13.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
